20240319 갠프로젝트

--- a/BookList/src/main/webapp/index.html
+++ b/BookList/src/main/webapp/index.html
@@ -18,7 +18,7 @@
         </li>
 
         <li>
-            <a href="/bookList/insert">도서 추가</a>
+            <a href="/bookList/add">도서 추가</a>
         </li>
     </ul>
 
